--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
             <p class="htext">There’s aboulutel lorem There’s aboulutel lorem.
             There’s aboulutel lorem There’s aboulutel lorem
             </p>
-            </div>
-            <button class="seventhb">Explore</button>
+            </div><a href = "project1.html">
+             <button class="seventhb">Explore</button></a>
             </div>
        </section>
     </section>
